# lksrc

./: .gitignore  README.md  lksrc.sln
lksrc/: AnimatedSprite.cpp  AnimatedSprite.h  Button.cpp  Button.h  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Collider2D.cpp  Collider2D.h  Collisor.cpp  Collisor.h  Engine.cpp  Engine.h  EntityManager.cpp  EntityManager.h  Font.cpp  Font.h  GameEntity.cpp  GameEntity.h  GameMap.cpp  GameMap.h  GameState.h  GlobalResources.cpp  GlobalResources.h  Input.cpp  Input.h  Layer.h  Main.cpp  Map.cpp  Map.h  MapParser.cpp  MapParser.h  Menu.cpp  Menu.h  Pause.cpp  Pause.h  Play.cpp  Play.h  Player.cpp  (+19 more)
lksrc/assets/maps/: mapDemo.tmx  objectsLevel1.lkobj
lksrc/cmake/sdl2/: FindSDL2.cmake  SDL2.rar
lksrc/glad/include/glad/: glad.h
lksrc/glad/src/: glad.c
lksrc/lksrc/Debug/lksrc.tlog/: lksrc.lastbuildstate
lksrc/src/: Main.cpp
lksrc/src/cpp/Camera/: Camera.cpp
lksrc/src/cpp/Collision/: Collider2D.cpp  Collisor.cpp
lksrc/src/cpp/Core/: Button.cpp  Engine.cpp  Input.cpp  Sound.cpp
lksrc/src/cpp/Entities/: Player.cpp  PlayerHit.cpp
lksrc/src/cpp/Entities/Enemies/: Dead.cpp  DeadFire.cpp  Enemy.cpp  EnemyHit.cpp  Skeleton.cpp  Wolf.cpp  Zombie.cpp
lksrc/src/cpp/GameStates/: GameOver.cpp  Menu.cpp  Options.cpp  OptionsPause.cpp  Pause.cpp  Play.cpp
lksrc/src/cpp/Graphics/: AnimatedSprite.cpp  Font.cpp  PlayerGUI.cpp  TexturedRectangle.cpp
lksrc/src/cpp/Managers/: EnemyManager.cpp  EntityManager.cpp  GameEntity.cpp  ResourceManager.cpp  TextureManager.cpp  Utils.cpp
lksrc/src/cpp/Map/: GameMap.cpp  MapParser.cpp  TileLayer.cpp
lksrc/src/cpp/Physics/: Vec2D.cpp
lksrc/src/header/Camera/: Camera.h  Point.h
lksrc/src/header/Collision/: Collider2D.h  Collisor.h
lksrc/src/header/Core/: Button.h  Engine.h  GlobalResources.h  Input.h  Sound.h
lksrc/src/header/Entities/: Player.h  PlayerHit.h
lksrc/src/header/Entities/Enemies/: Dead.h  DeadFire.h  Enemy.h  EnemyHit.h  Skeleton.h  Wolf.h  Zombie.h
lksrc/src/header/GameStates/: GameOver.h  Menu.h  Options.h  OptionsPause.h  Pause.h  Play.h
lksrc/src/header/Graphics/: AnimatedSprite.h  Font.h  PlayerGUI.h  RenderEntityLayer.h  TexturedRectangle.h
lksrc/src/header/Managers/: EnemyManager.h  EntityManager.h  GameEntity.h  ResourceManager.h  TextureManager.h
lksrc/src/header/Map/: GameMap.h  MapParser.h  TileLayer.h
lksrc/src/header/Physics/: Vec2D.h
lksrc/thirdpart/TinyXML/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
(+14 files in other folders)
